--- a/templates/linechartmulti15/index.html
+++ b/templates/linechartmulti15/index.html
@@ -39,8 +39,8 @@
 	            {
 	              label: "Bus Breakdowns / Preventable Delays",
 	              fill: false,
-	              pointBackgroundColor: ['red', "#BE4BDB", "#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB",'red',"#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB",'red',"#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB",'red',"#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E",'red',"#82C91E","#82C91E","#82C91E","#82C91E"],
-	              pointBorderColor:['red', "#BE4BDB", "#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB",'red',"#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB",'red',"#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB",'red',"#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E",'red',"#82C91E","#82C91E","#82C91E","#82C91E"],
+	              pointBackgroundColor: ['red', "#BE4BDB", "#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB",'red',"#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB",'red',"#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB",'red',"#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB",'red',"#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB"],
+	              pointBorderColor:['red', "#BE4BDB", "#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB",'red',"#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB",'red',"#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB",'red',"#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB",'red',"#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB"],
 	              backgroundColor: "#BE4BDB",
 	              borderColor: "#BE4BDB",
 	              borderWidth: 0,
