--- a/templates/linechartmulti14/index.html
+++ b/templates/linechartmulti14/index.html
@@ -39,7 +39,7 @@ var myChart = new Chart(ctx, {
             //  borderWidth: 0,
               hoverBackgroundColor: "#82C91E",
               hoverBorderColor: "#eeeeee",
-              data: [298,229,214,215,233,185,177,195,200,273,341,236,244,285,271,240,281,343,300,265,353,356,310,297,285,297,293,328,310,274,439,422,459,440,412,487,442,349,350,316,446,468,426,367,315
+              data: [298,229,214,215,233,185,177,195,200,273,341,236,244,285,271,240,281,343,300,265,353,356,310,297,285,297,293,328,310,274,439,422,459,440,412,487,442,349,350,316,446,468,426,367,315]
             },/*
             {
               label: "Heavy Traffic Trend",
@@ -192,7 +192,6 @@ var myChart = new Chart(ctx, {
           },
         ]
       }
-
     }
   });
 </script>
