--- a/templates/barhorizontal18/index.html
+++ b/templates/barhorizontal18/index.html
@@ -1,143 +1,164 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>Average Minutes of Delay Per Month Sept 2015 - Sept 2018</title>
+	<html lang="en">
+	    <head>
+	        <meta charset="utf-8" />
+	        <title>Average Minutes of Delay Per Month Sept 2015 – Jan 2020</title>
+	
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
+	        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
+	
 
-    </head>
-    <body>
+	    </head>
+	    <body>
+	
 
+	
 
-<canvas id="barhorizontal18" max-width="400" height="600"></canvas>
-<script>
+	<canvas id="barhorizontal18" max-width="400" height="600"></canvas>
+	<script>
+	
 
-Chart.defaults.global.responsive = true
-Chart.defaults.global.legend.display= false
-Chart.defaults.global.maintainAspectRatio = false
-Chart.defaults.global.title = true
+	Chart.defaults.global.responsive = true
+	Chart.defaults.global.legend.display= false
+	Chart.defaults.global.maintainAspectRatio = false
+	Chart.defaults.global.title = true
+	
 
+	
 
+	
 
-Chart.defaults.scale = {
-		display: true,
-		position: "left",
-
-		// grid line settings
-		gridLines: {
-			display: false,
-			color: "rgba(0, 0, 0, 0.1)",
-			lineWidth: 1,
-			drawBorder: true,
-			drawOnChartArea: true,
-			drawTicks: true,
-			tickMarkLength: 10,
-			zeroLineWidth: 1,
-			zeroLineColor: "rgba(0,0,0,0.25)",
-			offsetGridLines: false
-		},
-
-		// scale label
-		scaleLabel: {
-			// actual label
-			labelString: '',
-
-			// display property
-			display: false
-		},
-
-		// label settings
-		ticks: {
-			beginAtZero: true,
-      minRotation: 0,
-			maxRotation: 50,
-			mirror: false,
-			padding: 10,
-			reverse: false,
+	Chart.defaults.scale = {
 			display: true,
-			autoSkip: false,
-			autoSkipPadding: 0,
-			labelOffset: 0,
-			callback: function(value) {
-				return '' + value;
-			}
-		}
-	};
+			position: "left",
+	
 
-// Chart.defaults.global.defaultFontSize = 10
+			// grid line settings
+			gridLines: {
+				display: false,
+				color: "rgba(0, 0, 0, 0.1)",
+				lineWidth: 1,
+				drawBorder: true,
+				drawOnChartArea: true,
+				drawTicks: true,
+				tickMarkLength: 10,
+				zeroLineWidth: 1,
+				zeroLineColor: "rgba(0,0,0,0.25)",
+				offsetGridLines: false
+			},
+	
 
-var ctx = document.getElementById("barhorizontal18");
+			// scale label
+			scaleLabel: {
+				// actual label
+				labelString: '',
+	
 
-var myChart = new Chart(ctx, {
-    type: 'horizontalBar',
-    data: {
-        labels: [
-          "Sep 2015","Oct 2015","Nov 2015","Dec 2015","Jan 2016","Feb 2016","Mar 2016","Apr 2016","May 2016","Jun 2016","Sep 2016","Oct 2016","Nov 2016","Dec 2016","Jan 2017","Feb 2017","Mar 2017","Apr 2017","May 2017","Jun 2017","Sep 2017","Oct 2017","Nov 2017","Dec 2017","Jan 2018","Feb 2018","Mar 2018","Apr 2018","May 2018","Jun 2018","Sep 2018"
-        ],
-        datasets: [{
-            label: 'Average Minutes of Delay Per Month Sept 2015 - Sept 2018',
-            backgroundColor:"#BE4BDB",
-            borderColor: "#eeeeee",
-            borderWidth: 1,
-            hoverBackgroundColor: "#9E9E9E",
-            hoverBorderColor: "#eeeeee",
-            data: [24.5,24.6,24.4,23.9,28.4,24.9,24.4,23.8,24.9,24.6,25.5,26.6,26.4,25.1,27.1,27.0,27.1,26.9,26.1,27.2,24.8,22.3,21.8,21.0,24.1,23.1,24.1,25.4,27.6,28.3,28.1]
-        }]
-    },
-    options: {
-      title:{
-        display: true,
-        padding: 20,
-        position: 'bottom',
-        text: 'Average Minutes Delayed'
-      },
-      scales:{
-        xAxes: [{
-          display: true,
-          ticks: {
-            beginAtZero: true,
-            callback: function(value) {
-              return value.toLocaleString('en-US')+' mins';
-            }
-          }
-        }],
-        yAxes: [{
-          ticks:{
-              maxTicksLimit: 6
-          }
-        }]
-      },
-      tooltips: {
-        callbacks: {
-/*
-          label: function(tooltipItem, data) {
-            return '$' + data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US');
-          },
-          */
-          title: function(tooltipItems, data) {
-					// Pick first xLabel for now
-					var title = 'Average Minutes Delay';
+				// display property
+				display: false
+			},
+	
 
-					if (tooltipItems.length > 0) {
-						if (tooltipItems[0].yLabel) {
-							title = tooltipItems[0].yLabel;
-						} else if (data.labels.length > 0 && tooltipItems[0].index < data.labels.length) {
-							title = data.labels[tooltipItems[0].index];
-						}
-					}
-
-					return title;
-				},
-				label: function(tooltipItem, data) {
-					var datasetLabel = data.datasets[tooltipItem.datasetIndex].label || '';
-					return tooltipItem.xLabel.toLocaleString('en-US')+' mins';
+			// label settings
+			ticks: {
+				beginAtZero: true,
+	      minRotation: 0,
+				maxRotation: 50,
+				mirror: false,
+				padding: 10,
+				reverse: false,
+				display: true,
+				autoSkip: false,
+				autoSkipPadding: 0,
+				labelOffset: 0,
+				callback: function(value) {
+					return '' + value;
 				}
-        }
-      }
-    }
+			}
+		};
+	
 
-});
-</script>
-    </body>
-</html>
+	// Chart.defaults.global.defaultFontSize = 10
+	
+
+	var ctx = document.getElementById("barhorizontal18");
+	
+
+	var myChart = new Chart(ctx, {
+	    type: 'horizontalBar',
+	    data: {
+	        labels: [
+	          "Sep 2015","Oct 2015","Nov 2015","Dec 2015","Jan 2016","Feb 2016","Mar 2016","Apr 2016","May 2016","Jun 2016","Sep 2016","Oct 2016","Nov 2016","Dec 2016","Jan 2017","Feb 2017","Mar 2017","Apr 2017","May 2017","Jun 2017","Sep 2017","Oct 2017","Nov 2017","Dec 2017","Jan 2018","Feb 2018","Mar 2018","Apr 2018","May 2018","Jun 2018","Sep 2018","Oct 2018","Nov 2018","Dec 2018","Jan 2019","Feb 2019","Mar 2019","Apr 2019","May 2019","Jun 2019","Sep 2019","Oct 2019","Nov 2019","Dec 2019","Jan 2020"
+	        ],
+	        datasets: [{
+	            label: 'Average Minutes of Delay Per Month Sept 2015 – Jan 2020',
+	            backgroundColor:"#BE4BDB",
+	            borderColor: "#eeeeee",
+	            borderWidth: 1,
+	            hoverBackgroundColor: "#9E9E9E",
+	            hoverBorderColor: "#eeeeee",
+	            data: [24.5,24.6,24.4,23.9,28.4,24.9,24.4,23.8,24.9,24.6,25.5,26.6,26.4,25.1,27.1,27.0,27.1,26.9,26.1,27.2,24.8,22.3,21.8,21.0,24.1,23.1,24.1,25.4,27.6,28.3,28.1,30.2,29.6,30.5,31.3,30.8,31,27.6,27.6,28.5,27.9,27.2,27.2,26.8,26.3]
+	        }]
+	    },
+	    options: {
+	      title:{
+	        display: true,
+	        padding: 20,
+	        position: 'bottom',
+	        text: 'Average Minutes Delayed'
+	      },
+	      scales:{
+	        xAxes: [{
+	          display: true,
+	          ticks: {
+	            beginAtZero: true,
+	            callback: function(value) {
+	              return value.toLocaleString('en-US')+' mins';
+	            }
+	          }
+	        }],
+	        yAxes: [{
+	          ticks:{
+	              maxTicksLimit: 6
+	          }
+	        }]
+	      },
+	      tooltips: {
+	        callbacks: {
+	/*
+	          label: function(tooltipItem, data) {
+	            return '$' + data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US');
+	          },
+	          */
+	          title: function(tooltipItems, data) {
+						// Pick first xLabel for now
+						var title = 'Average Minutes Delay';
+	
+
+						if (tooltipItems.length > 0) {
+							if (tooltipItems[0].yLabel) {
+								title = tooltipItems[0].yLabel;
+							} else if (data.labels.length > 0 && tooltipItems[0].index < data.labels.length) {
+								title = data.labels[tooltipItems[0].index];
+							}
+						}
+	
+
+						return title;
+					},
+					label: function(tooltipItem, data) {
+						var datasetLabel = data.datasets[tooltipItem.datasetIndex].label || '';
+						return tooltipItem.xLabel.toLocaleString('en-US')+' mins';
+					}
+	        }
+	      }
+	    }
+	
+
+	});
+	</script>
+	    </body>
+	</html>
+
+
+
