--- a/templates/barhorizontal19/index.html
+++ b/templates/barhorizontal19/index.html
@@ -1,143 +1,163 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>Average Minutes of Delay Per Reason Sept 2015 - Sept 2018</title>
+	<html lang="en">
+	    <head>
+	        <meta charset="utf-8" />
+	        <title>Average Minutes of Delay Per Reason Sept 2015 – Jan 2020</title>
+	
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
+	        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
+	
 
-    </head>
-    <body>
+	    </head>
+	    <body>
+	
 
+	
 
-<canvas id="barhorizontal19" max-width="400" height="400"></canvas>
-<script>
+	<canvas id="barhorizontal19" max-width="400" height="400"></canvas>
+	<script>
+	
 
-Chart.defaults.global.responsive = true
-Chart.defaults.global.legend.display= false
-Chart.defaults.global.maintainAspectRatio = false
-Chart.defaults.global.title = true
+	Chart.defaults.global.responsive = true
+	Chart.defaults.global.legend.display= false
+	Chart.defaults.global.maintainAspectRatio = false
+	Chart.defaults.global.title = true
+	
 
+	
 
+	
 
-Chart.defaults.scale = {
-		display: true,
-		position: "left",
-
-		// grid line settings
-		gridLines: {
-			display: false,
-			color: "rgba(0, 0, 0, 0.1)",
-			lineWidth: 1,
-			drawBorder: true,
-			drawOnChartArea: true,
-			drawTicks: true,
-			tickMarkLength: 10,
-			zeroLineWidth: 1,
-			zeroLineColor: "rgba(0,0,0,0.25)",
-			offsetGridLines: false
-		},
-
-		// scale label
-		scaleLabel: {
-			// actual label
-			labelString: '',
-
-			// display property
-			display: false
-		},
-
-		// label settings
-		ticks: {
-			beginAtZero: true,
-      minRotation: 0,
-			maxRotation: 50,
-			mirror: false,
-			padding: 10,
-			reverse: false,
+	Chart.defaults.scale = {
 			display: true,
-			autoSkip: false,
-			autoSkipPadding: 0,
-			labelOffset: 0,
-			callback: function(value) {
-				return '' + value;
-			}
-		}
-	};
+			position: "left",
+	
 
-// Chart.defaults.global.defaultFontSize = 10
+			// grid line settings
+			gridLines: {
+				display: false,
+				color: "rgba(0, 0, 0, 0.1)",
+				lineWidth: 1,
+				drawBorder: true,
+				drawOnChartArea: true,
+				drawTicks: true,
+				tickMarkLength: 10,
+				zeroLineWidth: 1,
+				zeroLineColor: "rgba(0,0,0,0.25)",
+				offsetGridLines: false
+			},
+	
 
-var ctx = document.getElementById("barhorizontal19");
+			// scale label
+			scaleLabel: {
+				// actual label
+				labelString: '',
+	
 
-var myChart = new Chart(ctx, {
-    type: 'horizontalBar',
-    data: {
-        labels: [
-          "Accident","Mechanical Problem","Flat Tire","Won't Start","Weather Conditions","Problematic Route","Late Return from Field Trip","Other","Heavy Traffic","Delayed by School"
-        ],
-        datasets: [{
-            label: 'Average Minutes of Delay Per Reason Sept 2015 - Sept 2018',
-            backgroundColor:["#D05D4E","#F59F00","#228AE6","#12B886","#23417D","#A07952","#82C91E","#CACACA","#2F56A6","#BE4BDB"],
-            borderColor: "#eeeeee",
-            borderWidth: 1,
-            hoverBackgroundColor: "#9E9E9E",
-            hoverBorderColor: "#eeeeee",
-            data: [39.1,34.1,33.4,31.8,29.5,29.4,28.6,28.1,23.4,18.9]
-        }]
-    },
-    options: {
-      title:{
-        display: true,
-        padding: 20,
-        position: 'bottom',
-        text: 'Average Minutes Delayed'
-      },
-      scales:{
-        xAxes: [{
-          display: true,
-          ticks: {
-            beginAtZero: true,
-            callback: function(value) {
-              return value.toLocaleString('en-US')+' mins';
-            }
-          }
-        }],
-        yAxes: [{
-          ticks:{
-              maxTicksLimit: 6
-          }
-        }]
-      },
-      tooltips: {
-        callbacks: {
-/*
-          label: function(tooltipItem, data) {
-            return '$' + data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US');
-          },
-          */
-          title: function(tooltipItems, data) {
-					// Pick first xLabel for now
-					var title = 'Average Minutes Delay';
+				// display property
+				display: false
+			},
+	
 
-					if (tooltipItems.length > 0) {
-						if (tooltipItems[0].yLabel) {
-							title = tooltipItems[0].yLabel;
-						} else if (data.labels.length > 0 && tooltipItems[0].index < data.labels.length) {
-							title = data.labels[tooltipItems[0].index];
-						}
-					}
-
-					return title;
-				},
-				label: function(tooltipItem, data) {
-					var datasetLabel = data.datasets[tooltipItem.datasetIndex].label || '';
-					return tooltipItem.xLabel.toLocaleString('en-US')+' mins';
+			// label settings
+			ticks: {
+				beginAtZero: true,
+	      minRotation: 0,
+				maxRotation: 50,
+				mirror: false,
+				padding: 10,
+				reverse: false,
+				display: true,
+				autoSkip: false,
+				autoSkipPadding: 0,
+				labelOffset: 0,
+				callback: function(value) {
+					return '' + value;
 				}
-        }
-      }
-    }
+			}
+		};
+	
 
-});
-</script>
-    </body>
-</html>
+	// Chart.defaults.global.defaultFontSize = 10
+	
+
+	var ctx = document.getElementById("barhorizontal19");
+	
+
+	var myChart = new Chart(ctx, {
+	    type: 'horizontalBar',
+	    data: {
+	        labels: [
+	          "Accident","Mechanical Problem","Flat Tire","Won't Start","Weather Conditions","Problematic Route","Late Return from Field Trip","Other","Heavy Traffic","Delayed by School"
+	        ],
+	        datasets: [{
+	            label: 'Average Minutes of Delay Per Reason Sept 2015 – Jan 2020',
+	            backgroundColor:["#D05D4E","#F59F00","#228AE6","#12B886","#23417D","#A07952","#82C91E","#CACACA","#2F56A6","#BE4BDB"],
+	            borderColor: "#eeeeee",
+	            borderWidth: 1,
+	            hoverBackgroundColor: "#9E9E9E",
+	            hoverBorderColor: "#eeeeee",
+	            data: [38.8,33,33.6,31.6,28.4,34,27.6,29.1,25.2,20]
+	        }]
+	    },
+	    options: {
+	      title:{
+	        display: true,
+	        padding: 20,
+	        position: 'bottom',
+	        text: 'Average Minutes Delayed'
+	      },
+	      scales:{
+	        xAxes: [{
+	          display: true,
+	          ticks: {
+	            beginAtZero: true,
+	            callback: function(value) {
+	              return value.toLocaleString('en-US')+' mins';
+	            }
+	          }
+	        }],
+	        yAxes: [{
+	          ticks:{
+	              maxTicksLimit: 6
+	          }
+	        }]
+	      },
+	      tooltips: {
+	        callbacks: {
+	/*
+	          label: function(tooltipItem, data) {
+	            return '$' + data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US');
+	          },
+	          */
+	          title: function(tooltipItems, data) {
+						// Pick first xLabel for now
+						var title = 'Average Minutes Delay';
+	
+
+						if (tooltipItems.length > 0) {
+							if (tooltipItems[0].yLabel) {
+								title = tooltipItems[0].yLabel;
+							} else if (data.labels.length > 0 && tooltipItems[0].index < data.labels.length) {
+								title = data.labels[tooltipItems[0].index];
+							}
+						}
+	
+
+						return title;
+					},
+					label: function(tooltipItem, data) {
+						var datasetLabel = data.datasets[tooltipItem.datasetIndex].label || '';
+						return tooltipItem.xLabel.toLocaleString('en-US')+' mins';
+					}
+	        }
+	      }
+	    }
+	
+
+	});
+	</script>
+	    </body>
+	</html>
+
+
