--- a/templates/barhorizontal66/index.html
+++ b/templates/barhorizontal66/index.html
@@ -91,7 +91,7 @@ var myChart = new Chart(ctx, {
           ticks: {
             beginAtZero: true,
             callback: function(value) {
-              return '' + value.toLocaleString('en-US');
+              return '%' + value.toLocaleString('en-US');
             }
           }
         }]
@@ -99,7 +99,7 @@ var myChart = new Chart(ctx, {
       tooltips: {
         callbacks: {
           label: function(tooltipItem, data) {
-            return '' + data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US');
+            return '%' + data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US');
           },
         }
       }
