--- a/templates/barhorizontal66/index.html
+++ b/templates/barhorizontal66/index.html
@@ -57,7 +57,7 @@ Chart.defaults.scale = {
 			autoSkipPadding: 0,
 			labelOffset: 0,
 			callback: function(value) {
-				return '' + value;
+				return '%' + value;
 			}
 		}
 	};
