--- a/templates/doughnut69_nys.html
+++ b/templates/doughnut69_nys.html
@@ -47,7 +47,7 @@ var data = {
           "Fossil Fuels"],
     datasets: [{
         label: 'Energy by Source',
-            backgroundColor:["#D05D4E","#F59F00","#228AE6","#12B886","#23417D"],
+            backgroundColor:["#F59F00","#D05D4E","#228AE6","#12B886","#23417D"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
