--- a/templates/stackedbar18/index.html
+++ b/templates/stackedbar18/index.html
@@ -118,7 +118,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: '2014 - 2019'
+              labelString: 'Days Since Peak Transmission'
             }
           }]
         },
