resolved issue with new const

--- a/templates/stackedbar18/index.html
+++ b/templates/stackedbar18/index.html
@@ -144,6 +144,7 @@
     const y2 = [];
     const y3 = [];
     const y4 = [];
+    const y5 = [];
 
     const response = await fetch('https://raw.githubusercontent.com/NewYorkCityCouncil/Covid_Transmission_data/master/Euro_US_Transmission_Rates.csv?token=ADINN6WJZRKD3AZ4K2GHAEK6UJGKA');
     const data = await response.text();
