--- a/templates/stackedbar18/index.html
+++ b/templates/stackedbar18/index.html
@@ -93,7 +93,7 @@
             stacked: true,
             ticks: {
               callback: function(value, index, values) {
-                return '$'+ value.toLocaleString('en-US')/* + ' People'*/;
+                return ''+ value.toLocaleString('en-US')/* + ' People'*/;
               },
               beginAtZero: true,
             },
