--- a/templates/stackedbar18/index.html
+++ b/templates/stackedbar18/index.html
@@ -146,7 +146,8 @@
     const y4 = [];
     const y5 = [];
 
-    const response = await fetch('https://raw.githubusercontent.com/NewYorkCityCouncil/Covid_Transmission_data/master/Euro_US_Transmission_Rates.csv?token=ADINN6VQDAYYAMGJDZJ4ACC6XGLRG');
+    const urls = 'https://raw.githubusercontent.com/NewYorkCityCouncil/Covid_Transmission_data/master/Euro_US_Transmission_Rates.csv?token=ADINN6VQDAYYAMGJDZJ4ACC6XGLRG';
+    const response = await fetch(urls);
     const data = await response.text();
 
     const table = data.split('\n').slice(1);
