--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -7,8 +7,8 @@
   <title>Median Income and Covid19 Death Rate</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
-  <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
-  <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.min.js"></script>
+  <!--<script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>-->
+    <!--<script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.min.js"></script>-->
 
 </head>
 <body>
