--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>Median Income and Covid19 Death Rate</title>
+  <title>Average revnue a taxicab receives per month</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
-  <!--<script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>-->
-    <!--<script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.min.js"></script>-->
+  <!--  <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>-->
+  <!-- <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.min.js"></script>-->
 
 </head>
 <body>
@@ -16,8 +16,8 @@
   <script>
   //CHART JS
   Chart.defaults.global.legend.display = false,
-  //  Chart.defaults.global.defaultFontFamily = 'open sans'
-  //  Chart.defaults.global.defaultFontColor = "#ffffff"
+  Chart.defaults.global.defaultFontFamily = 'open sans'
+
 
   chartIt();
 
@@ -25,64 +25,76 @@
     const data = await getData();
     const ctx = document.getElementById('chart').getContext('2d');
     const myChart = new Chart(ctx, {
-      type: 'scatter',
+      type: 'line',
       data: {
         labels: data.xs,
         datasets: [{
-          label: 'Median Income and COVID19 Death Rate',
+          label: 'Average Monthy Revenue',
           data: data.ys,
           fill: false,
-          backgroundColor: '#fcb846',
-          borderColor: '#fcb846',
-          borderWidth: 1,
-          lineTension: 4,
-          hoverBackgroundColor: '#fa5047',
-          barPercentage: .8
+          lineTension: 0.5,
+          backgroundColor:"#222222",
+          borderColor: "#222222",
+          borderWidth: 3,
+          borderCapStyle: 'butt',
+          borderDash: [],
+          borderDashOffset: 0.0,
+          //    borderJoinStyle: 'miter',
+          pointBorderColor: "#222222",
+          pointBackgroundColor: "#222222",
+          pointBorderWidth: 1,
+          pointHoverRadius: 6,
+          pointHoverBackgroundColor: "#E6E6E6",
+          pointHoverBorderColor: "#E6E6E6",
+          pointHoverBorderWidth: 2,
+          pointRadius: 1,
+          pointHitRadius: 4,
+          hoverBackgroundColor: "#E6E6E6",
+          hoverBorderColor: "#E6E6E6",
         }]
       },
       options: {
         cornerRadius: 20,
         scales: {
-          xAxes: [{
+          yAxes: [{
             ticks: {
+              //max: 5,
+              //min: 200000,
+              //stepSize: 200000,
               callback: function(value, index, values) {
-                return '$' + value.toLocaleString('en-US')+' ';
+                return '$' + value.toLocaleString('en-US')+'';
               },
               beginAtZero: true,
-              //  max: 170000,
             },
             gridLines: {
-              display: false
+              display: true
             },
             scaleLabel: {
               display: true,
-              labelString: 'Median Income'
-            },
-            type: 'linear',
-            position: 'bottom'
+              labelString: 'Average Monthly Revenue'
+            }
           }],
-          yAxes: [{
+          xAxes: [{
             ticks: {
               callback: function(value, index, values) {
                 return value;
               },
-              //fontStyle: 'strong'
-              fontSize: 9,
+              fontStyle: 'strong'
             },
             gridLines: {
-              display: false
+              display: true
             }
           }]
         },
         tooltips: {
           callbacks: {
             label: function(tooltipItem, data) {
-              return '$'+ data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ '';
+              return '$'+ data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ ' Average Revenue';
             },
           },
-          backgroundColor: '#434343',
-          borderColor: '#f5f5f5',
-          borderWidth: 1,
+        //  backgroundColor: '#434343',
+        //  borderColor: '#f5f5f5',
+        //  borderWidth: 1,
           displayColors: false
         }
       }
@@ -99,11 +111,11 @@
     const table = data.split('\n').slice(1);
     table.forEach(row => {
       const columns = row.split(',');
-      const income = columns[4];
-      xs.push(income);
-      const covid_death = columns[10];
-      ys.push(parseFloat(covid_death)); //make data from string to number and added mean payers of 14 degrees
-      console.log(income, covid_death);
+      const date = columns[4];
+      xs.push(date);
+      const revenue = columns[10];
+      ys.push(parseFloat(revenue)); //make data from string to number and added mean payers of 14 degrees
+      console.log(date, revenue);
     });
     return { xs, ys };
   }
