--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -30,10 +30,10 @@
         labels: data.xs,
         datasets: [{
           label: 'Average Monthy Revenue',
-          data: [{
+          data: [
             data.xs,
             data.ys
-          }],
+          ],
           fill: false,
           lineTension: 0.5,
           backgroundColor:"#222222",
