--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -29,31 +29,31 @@
       data: {
         labels: data.xs,
         datasets: [{
-          label: 'Average Monthy Revenue',
-          data: [
-            data.xs,
-            data.ys
-          ],
-          fill: false,
-          lineTension: 0.5,
-          backgroundColor:"#222222",
-          borderColor: "#222222",
-          borderWidth: 3,
-          borderCapStyle: 'butt',
-          borderDash: [],
-          borderDashOffset: 0.0,
+          label: 'Median Income',
+          data: [{
+            x: data.xs,
+            y: data.ys
+          }],
+    //      fill: false,
+    //      lineTension: 0.5,
+    //      backgroundColor:"#222222",
+    //      borderColor: "#222222",
+    //      borderWidth: 3,
+      //    borderCapStyle: 'butt',
+        //  borderDash: [],
+          //borderDashOffset: 0.0,
           //    borderJoinStyle: 'miter',
-          pointBorderColor: "#222222",
-          pointBackgroundColor: "#222222",
-          pointBorderWidth: 1,
-          pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#E6E6E6",
-          pointHoverBorderColor: "#E6E6E6",
-          pointHoverBorderWidth: 2,
-          pointRadius: 1,
-          pointHitRadius: 4,
-          hoverBackgroundColor: "#E6E6E6",
-          hoverBorderColor: "#E6E6E6",
+      //    pointBorderColor: "#222222",
+      //    pointBackgroundColor: "#222222",
+        //  pointBorderWidth: 1,
+      //    pointHoverRadius: 6,
+        //  pointHoverBackgroundColor: "#E6E6E6",
+          //pointHoverBorderColor: "#E6E6E6",
+      //    pointHoverBorderWidth: 2,
+        //  pointRadius: 1,
+        //  pointHitRadius: 4,
+        //  hoverBackgroundColor: "#E6E6E6",
+        //  hoverBorderColor: "#E6E6E6",
         }]
       },
       options: {
