--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -57,7 +57,7 @@
         }]
       },
       options: {
-        cornerRadius: 20,
+  //    cornerRadius: 20,
         scales: {
           yAxes: [{
             ticks: {
@@ -74,7 +74,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Average Monthly Revenue'
+              labelString: 'COVID19 Death Rate'
             }
           }],
           xAxes: [{
@@ -98,7 +98,7 @@
         //  backgroundColor: '#434343',
         //  borderColor: '#f5f5f5',
         //  borderWidth: 1,
-          displayColors: false
+//          displayColors: false
         }
       }
     });
