--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -70,7 +70,7 @@
         scales: {
           yAxes: [{
             ticks: {
-              //max: 5,
+              max: 300,
               //min: 200000,
               //stepSize: 200000,
               callback: function(value, index, values) {
