--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -16,7 +16,7 @@
   <script>
   //CHART JS
   Chart.defaults.global.legend.display = false,
-//  Chart.defaults.global.defaultFontFamily = 'open sans'
+  //  Chart.defaults.global.defaultFontFamily = 'open sans'
 
 
   chartIt();
@@ -34,39 +34,35 @@
             x: data.xs,
             y: data.ys
           }],
-    //      fill: false,
-    //      lineTension: 0.5,
-    //      backgroundColor:"#222222",
-    //      borderColor: "#222222",
-    //      borderWidth: 3,
-      //    borderCapStyle: 'butt',
-        //  borderDash: [],
+          //fill: false,
+          //lineTension: 0.5,
+          //backgroundColor:"#222222",
+          //borderColor: "#222222",
+          //borderWidth: 3,
+          //borderCapStyle: 'butt',
+          //borderDash: [],
           //borderDashOffset: 0.0,
-          //    borderJoinStyle: 'miter',
-      //    pointBorderColor: "#222222",
-      //    pointBackgroundColor: "#222222",
-        //  pointBorderWidth: 1,
-      //    pointHoverRadius: 6,
-        //  pointHoverBackgroundColor: "#E6E6E6",
+          //borderJoinStyle: 'miter',
+          //pointBorderColor: "#222222",
+          //pointBackgroundColor: "#222222",
+          //pointBorderWidth: 1,
+          //pointHoverRadius: 6,
+          //pointHoverBackgroundColor: "#E6E6E6",
           //pointHoverBorderColor: "#E6E6E6",
-<<<<<<< HEAD
           //pointHoverBorderWidth: 2,
           //pointRadius: 1,
           //pointHitRadius: 4,
           //hoverBackgroundColor: "#E6E6E6",
           //hoverBorderColor: "#E6E6E6",
-        },
-=======
-      //    pointHoverBorderWidth: 2,
-        //  pointRadius: 1,
-        //  pointHitRadius: 4,
-        //  hoverBackgroundColor: "#E6E6E6",
-        //  hoverBorderColor: "#E6E6E6",
+          //pointHoverBorderWidth: 2,
+          //pointRadius: 1,
+          //pointHitRadius: 4,
+          //hoverBackgroundColor: "#E6E6E6",
+          //hoverBorderColor: "#E6E6E6",
         }]
       },
->>>>>>> parent of 3edd258... change to stucture of the variables
       options: {
-  //    cornerRadius: 20,
+        //    cornerRadius: 20,
         scales: {
           yAxes: [{
             ticks: {
@@ -104,10 +100,10 @@
               return '$'+ data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ ' Average Revenue';
             },
           },
-        //  backgroundColor: '#434343',
-        //  borderColor: '#f5f5f5',
-        //  borderWidth: 1,
-//          displayColors: false
+          //  backgroundColor: '#434343',
+          //  borderColor: '#f5f5f5',
+          //  borderWidth: 1,
+          //          displayColors: false
         }
       }
     });
