--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -87,6 +87,7 @@
               callback: function(value, index, values) {
                 return value;
               },
+              max: 200000,
               fontStyle: 'strong'
             },
             gridLines: {
