--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="linechart23" width=auto max-height="400"></canvas>
+<canvas id="chart" width=auto max-height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
