--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -88,10 +88,10 @@
             }
           }
         }],
-        x:{
+        xAxes:[{
           type: 'linear',
           position: 'bottom'
-        }
+        }]
       }
     }
   });
