--- a/templates/scatter1/indexold4.html
+++ b/templates/scatter1/indexold4.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <title>People in Custody at Dept. of Correction Facilities: Detained or Sentenced</title>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 
 </head>
 <body>
