added data variables

--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -29,15 +29,9 @@
       datasets: [{
           label: 'Scatter Dataset',
           data: [{
-              x: -10,
-              y: 0
-          }, {
-              x: 0,
-              y: 10
-          }, {
-              x: 10,
-              y: 5
-          }]
+            x: data.xs,
+            y: data.ys
+          }],
       }]
   },
   options: {
