--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -29,8 +29,8 @@
       datasets: [{
           label: 'Scatter Dataset',
           data: [{
-            data.xs,
-            data.ys
+            x: data.xs,
+            y: data.ys
           }],
       }]
   },
