--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -61,7 +61,7 @@ async function getData() {
     const covid_death = columns[10];
     ys.push(parseFloat(covid_death)); //make data from string to number and added mean payers of 14 degrees
   //  console.log(income, covid_death);
-    const xsys = {x: , y: covid_death};
+    const xsys = {x: income, y: covid_death};
     xy.push(xsys);
     console.log(xsys);
 
