--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -28,10 +28,7 @@
   data: {
       datasets: [{
           label: 'Scatter Dataset',
-          data: [{
-            x: data.xs,
-            y: data.ys
-          }],
+          data: data.xy,
       }]
   },
   options: {
