--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -63,7 +63,7 @@ async function getData() {
     console.log(xsys);
 
   });
-  return { xs, ys };
+//  return { xs, ys };
   return {xy};
 }
 </script>
