--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -60,8 +60,8 @@ async function getData() {
     //console.log(income, covid_death);
     const xsys = {x: columns[4], y: columns[10]};
     xy.push(xsys);
-  //  console.log(xsys);
-  console.log(income);
+    console.log({x: columns[4]});
+//  console.log(income);
   });
   return { xs, ys };
   return {xy};
