--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -58,10 +58,10 @@ async function getData() {
     const covid_death = columns[10];
     ys.push(parseFloat(covid_death)); //make data from string to number
     //console.log(income, covid_death);
-    const xsys = {x: income, y: covid_death};
+    const xsys = {x: parseFloat(income), y: parseFloat(covid_death)};
     xy.push(xsys);
-    console.log(xsys);
-//  console.log(income);
+  //  console.log(xsys);
+  console.log(covid_death);
   });
   return { xs, ys };
   return {xy};
