another variable try

--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -28,7 +28,7 @@
   data: {
       datasets: [{
           label: 'Scatter Dataset',
-          data: xsys,
+          data: data.xy,
       }]
   },
   options: {
