moved console log

--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -29,7 +29,6 @@
       datasets: [{
           label: 'Scatter Dataset',
           data: data.xy,
-          console.log(data.xy);
       }]
   },
   options: {
@@ -42,6 +41,7 @@
   }
 });
 }
+console.log(data.xy)
 //SPLITTING AND BRINGING IN CSV DATA
 async function getData() {
   const xs = [];
