--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -28,8 +28,7 @@
   data: {
       datasets: [{
           label: 'Scatter Dataset',
-          data: data.xy,
-          console.log(data.xy)
+          data: data.xy
       }]
   },
   options: {
@@ -40,6 +39,7 @@
           }
       }
   }
+      console.log(data.xy)
 });
 }
 
