--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -30,6 +30,7 @@
           label: 'Scatter Dataset',
           data: data.xy
       }]
+      console.log(data.xy)
   },
   options: {
       scales: {
@@ -38,8 +39,7 @@
               position: 'bottom'
           }
       }
-  }
-      console.log(data.xy);
+
 });
 }
 
