to many objects in array

--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -28,7 +28,7 @@
       data: {
         datasets: [{
           label: 'Scatter Dataset',
-          data: xy
+          data: xy[0]
         }]
       },
       options: {
