--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -33,9 +33,10 @@
       },
       options: {
         scales: {
-          x: {
+          xAxes: {
             type: 'linear',
             position: 'bottom'
+            display: true,
           }
         }
       }
