added brackets  back

--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -37,6 +37,10 @@
             type: 'linear',
             position: 'bottom'
             display: true,
+            scaleLabel: {
+              display: true, // mandatory
+              labelString: 'Your label' // optional
+            }
           }
         }
       }
@@ -60,7 +64,7 @@
       const covid_death = columns[10];
       ys.push(parseFloat(covid_death)); //make data from string to number
       //console.log(income, covid_death);
-      const xsys = x: parseFloat(income), y: parseFloat(covid_death);
+      const xsys = {x: parseFloat(income), y: parseFloat(covid_death)};
       xy.push(xsys);
       console.log(xy);
       //console.log(covid_death);
