--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -35,7 +35,7 @@
         scales: {
           xAxes: {
             type: 'linear',
-            position: 'bottom'
+            position: 'bottom',
             display: true,
             scaleLabel: {
               display: true, // mandatory
