--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -67,11 +67,11 @@
       const xsys = {x: parseFloat(income), y: parseFloat(covid_death)};
       xy.push(xsys);
       console.log(xy);
-      console.log(xs);
+      console.log(ys);
       //console.log(covid_death);
     });
     return { xs, ys };
-    return {xy};
+    return {xy};å
   }
   </script>
 </body>
